--- a/certificate-generator-web/pom.xml
+++ b/certificate-generator-web/pom.xml
@@ -67,6 +67,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>${artifactId}</finalName>
 	</build>
 
 	<repositories>
