--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codeclubbrasil</groupId>
-  <artifactId>certificate-generator</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>certificate-generator-core</module>
-  	<module>certificate-generator-web</module>
-  </modules>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>org.codeclubbrasil</groupId>
+    <artifactId>certificate-generator</artifactId>
+    <version>0.0.2-SNAPSHOT</version>
+
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>certificate-generator-core</module>
+        <module>certificate-generator-web</module>
+    </modules>
+
+
 </project>
