Versão 0.5 Implementação de API para geração do certificado Disponibilizado documentação da API em swagger Correção do nome do pacote de classes

--- a/certificate-generator-web/pom.xml
+++ b/certificate-generator-web/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.codeclubbrasil</groupId>
 		<artifactId>certificate-generator</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
+		<version>0.0.5-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.codeclubbrasil</groupId>
@@ -42,6 +42,11 @@
 		<dependency>
 			<groupId>org.codeclubbrasil</groupId>
 			<artifactId>certificate-generator-core</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codeclubbrasil</groupId>
+			<artifactId>certificate-generator-api</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
 		<dependency>
