--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.codeclubbrasil</groupId>
     <artifactId>certificate-generator</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -18,6 +18,7 @@
     <modules>
         <module>certificate-generator-core</module>
         <module>certificate-generator-web</module>
+        <module>certificate-generator-api</module>
     </modules>
 
     <dependencyManagement>
