--- a/certificate-generator-web/pom.xml
+++ b/certificate-generator-web/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.codeclubbrasil</groupId>
 		<artifactId>certificate-generator</artifactId>
-		<version>0.0.5-SNAPSHOT</version>
+		<version>0.0.6-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.codeclubbrasil</groupId>
@@ -42,12 +42,12 @@
 		<dependency>
 			<groupId>org.codeclubbrasil</groupId>
 			<artifactId>certificate-generator-core</artifactId>
-			<version>${parent.version}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codeclubbrasil</groupId>
 			<artifactId>certificate-generator-api</artifactId>
-			<version>${parent.version}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -57,17 +57,8 @@
 	</dependencies>
 
 	<build>
-		<finalName>${artifactId}</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
